# rosbot-manipulator-colaboration

./: .dockerignore  .gitignore  LICENSE  README.md
CAD/: cylinder 35x115.stl  cylinder 35x30.stl  cylinder 35x75.stl  plate.stl
docker_stuff/: .env  Dockerfile.controller  Dockerfile.grabber  Dockerfile.opencv  Dockerfile.realsense  Dockerfile.rviz  compose.main.yaml  compose.rviz.lan.yaml  compose.rviz.localization.yaml  compose.rviz.mapping.yaml
docker_stuff/config/: rosbot_localization.rviz
docker_stuff/rviz_config.rviz/: basic.rviz
docker_stuff_rosbot/: .env  Dockerfile.rosbot  compose.rosbot.control.yaml  compose.rosbot.hardware.yaml  compose.rosbot.lan.yaml  compose.rosbot.localization.yaml  compose.rosbot.mapping.yaml  ros_entrypoint.sh
docker_stuff_rosbot/maps/: map.yaml
ros2_ws/src/my_rosbot_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/my_rosbot_pkg/my_rosbot_pkg/: rosbot_control.py
ros2_ws/src/open_cv_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/open_cv_pkg/open_cv_pkg/: tracker.py
ros2_ws/src/open_manip/: package.xml  setup.cfg  setup.py
ros2_ws/src/open_manip/open_manip/: grabber_from_image_cords.py
